[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
homepage = "https://github.com/tasercake/kon"
documentation = "https://github.com/tasercake/kon/tree/master/README.md"
repository = "https://github.com/tasercake/kon"
authors = ["Krishna Penukonda <krishna@penukonda.me>"]
license = "MIT"

[workspace.dependencies]
# 1st-party crates
kon_cli = { path = "crates/kon_cli" }
kon = { path = "crates/kon" }

# External dependencies
clap = { version = "4.5.27", features = ["cargo", "derive"] }
env_logger = "0.11.6"
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.14.0"
log = "0.4.25"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
spade = "2.12.1"

[workspace.lints.rust]
unsafe_code = "forbid"
