[project]
name = "lowpolypy"
version = "0.1.0"
description = "A tool to create low-poly versions of images"
authors = [{ name = "Krishna Penukonda", email = "krishna@penukonda.me" }]
requires-python = ">=3.13"

dependencies = [
    "opencv-python-headless>=4.5.1",
    "scikit-image>=0.18.1",
    "numpy>=1.20.1",
    "scipy>=1.6.1",
    "typer>=0.15.1",
    "shapely>=2.0.6",
    "torch>=2.5.1",
]

[project.scripts]
lowpolypy = "lowpolypy.cli:app"

[dependency-groups]
dev = [
    "scipy-stubs>=1.15.1.0",
    "types-shapely>=2.0.0.20241221",
    "black>=20.8b1",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.14",
]
server = [
    "asgiref>=3.8.1",
    "fastapi>=0.115.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
