[package]
name = "lowpoly"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
env_logger = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
spade = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[lints]
workspace = true

[[bench]]
name = "polygon_utils_bench"
harness = false

[[bench]]
name = "polygon_generators_bench"
harness = false

[[bench]]
name = "point_generators_bench"
harness = false

[[bench]]
name = "colors_bench"
harness = false

[[bench]]
name = "lowpoly_bench"
harness = false
